# Capes

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  demo_ppt_generation.py  pyproject.toml  railway.toml  test_docker_sandbox.py  test_document_pack.py  test_file_api.py  test_import_document_skills.py  test_integration.py  test_sandbox_quick.py
.cape_storage/.metadata/: 1452e2ce-fe9b-431b-b268-3fbe7b469fa1.json  541792ec-5bee-4b9b-87ee-0a41291de45d.json  98c72102-306a-4966-9f0a-e07752e4b9c9.json
api/: __init__.py  deps.py  main.py  prompt_builder.py  schemas.py  state.py  state_updater.py  storage.py
api/routes/: __init__.py  capes.py  chat.py  files.py  models.py  packs.py  tools.py
cape/: __init__.py
cape/adapters/: __init__.py  base.py  claude.py  generic.py  openai.py
cape/agent/: __init__.py  agent.py  langchain.py
cape/core/: __init__.py  models.py
cape/importers/: __init__.py  skill.py  skill_enhanced.py
cape/registry/: __init__.py  matcher.py  registry.py
cape/runtime/: __init__.py  context.py  executors.py  runtime.py
cape/tools/: __init__.py  search.py
capes/code-analyzer/: cape.yaml
capes/data-transformer/: cape.yaml
docs/: AGENT_PLATFORM_INTEGRATION.md  CAPE_REINTEGRATION_PLAN.md  CAPE_SERVICE_ARCHITECTURE.md  IMPLEMENTATION_PROGRESS.md  META_EVALUATION.md  PPTX_CAPE_FULL_CHAIN.md  VERCEL_DEPLOYMENT_EVALUATION.md  cape-packs-design.md  code-execution-layer-design.md  creator-pack-spec.md  memory.md  office-pack-spec.md
examples/: basic_agent.py  custom_skill.py
output/: cape_demo.pptx
tests/: __init__.py  test_agent.py  test_docker_sandbox.py  test_file_api.py  test_importer.py  test_loader.py  test_matcher.py  test_models.py  test_packs.py  test_registry.py  test_runtime.py  test_sandbox.py
web/: package.json
(+56 files in other folders)
